<resources>
    <string name="app_name">Inventory Managment</string>
    <string name="Excitainment">Excitainment</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="add">ADD</string>
    <string name="add_image">Add Image</string>
    <string name="add_product">Add Product</string>
    <string name="add_vendor">Add Vendor</string>
    <string name="address">Address :</string>
<!--    <string name="app_name">Itemize - Inventory Management System</string>-->
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="call_vendor">Call Vendor</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="communicate">Communicate</string>
    <string name="company">Company :</string>
    <string name="contact_no">Contact No :</string>
    <string name="contact_us">Contact us</string>
    <string name="customer_contact">Customer Contact No :</string>
    <string name="customer_name">Customer Name :</string>
    <string name="date">Date :</string>
    <string name="date_hint">Date</string>
    <string name="del_all_entries">Delete all entries</string>
    <string name="delete">Delete</string>
    <string name="delete_products">Delete Products table</string>
    <string name="delete_vendors">Delete Vendors table</string>
    <string name="description">Description : (optional)</string>
    <string name="empty_vendor_desc">Start by adding a vendor</string>
    <string name="empty_view">Your inventory is empty</string>
    <string name="empty_view_desc">Start by adding an item</string>
    <string name="empty_view_vendor">There are no vendors</string>
    <string name="fb">Facebook</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="help">Help</string>
    <string name="hint">+91 9876543210 (Include country code)</string>
    <string name="home">Home</string>
    <string name="name">Name :</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="pie_chart">Pie Chart</string>
    <string name="plus">+</string>
    <string name="price">Sale Price :</string>
    <string name="product_list">Product List</string>
    <string name="product_name">Product Name :</string>
    <string name="purchase_detail">Purchase Detail</string>
    <string name="purchase_price">Purchase Price :</string>
    <string name="quantity">Quantity :</string>
    <string name="quantity_pc">Quantity</string>
    <string name="rate">Rate on Play Store</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="sale_detail">Sale Detail</string>
    <string name="sale_product">Sale Product</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="search_menu_title">Search</string>
    <string name="search_product">Search Product</string>
    <string name="share">Share The App</string>
    <string name="splash_description">Inventory Management System</string>
    <string name="splash_main">Itemize</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="supplier">Supplier :</string>
    <string name="supplier_name">Supplier Name :</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_product_list">ProductList</string>
    <string name="vendor_list">Vendor List</string>
    <string name="website">excitainment.blogspot.com</string>
</resources>